@@ -3,7 +3,6 @@ package uk.gov.hmcts.reform.civil.enums.caseprogression;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum TypeOfDocDocumentaryEvidenceOfTrial {
 
@@ -20,14 +19,13 @@ public enum TypeOfDocDocumentaryEvidenceOfTrial {
     }
 
     public static List<String> getAllDocsDisplayNames() {
-        List<TypeOfDocDocumentaryEvidenceOfTrial> list =
-            new ArrayList<TypeOfDocDocumentaryEvidenceOfTrial>(Arrays.asList(values()));
-        List<List<String>> listOfDocTypes =
-            list.stream().map(typeOfDocDocumentaryEvidenceOfTrial -> typeOfDocDocumentaryEvidenceOfTrial.getDisplayNames()).collect(
-            Collectors.toList());
+        List<TypeOfDocDocumentaryEvidenceOfTrial> list = new ArrayList<>(Arrays.asList(values()));
+        List<List<String>> listOfDocTypes = list.stream()
+            .map(TypeOfDocDocumentaryEvidenceOfTrial::getDisplayNames)
+            .toList();
         return listOfDocTypes.stream()
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     TypeOfDocDocumentaryEvidenceOfTrial(String... displayName) {
