@@ -11,22 +11,24 @@ import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.notify.NotificationsProperties;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.notify.NotificationService;
-import uk.gov.hmcts.reform.civil.service.flowstate.StateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.OrganisationService;
+import uk.gov.hmcts.reform.civil.service.flowstate.IStateFlowEngine;
 import uk.gov.hmcts.reform.civil.stateflow.model.State;
 import uk.gov.hmcts.reform.civil.utils.NotificationUtils;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NOTIFY_RESPONDENT_SOLICITOR1_FOR_CLAIM_DISMISSED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NOTIFY_RESPONDENT_SOLICITOR2_FOR_CLAIM_DISMISSED;
+import static uk.gov.hmcts.reform.civil.utils.NotificationUtils.buildPartiesReferencesEmailSubject;
+import static uk.gov.hmcts.reform.civil.utils.NotificationUtils.getRespondentLegalOrganizationName;
 import static uk.gov.hmcts.reform.civil.utils.NotificationUtils.is1v1Or2v1Case;
 import static uk.gov.hmcts.reform.civil.utils.NotificationUtils.isRespondent1;
 import static uk.gov.hmcts.reform.civil.utils.NotificationUtils.shouldSkipEventForRespondent1LiP;
 import static uk.gov.hmcts.reform.civil.utils.NotificationUtils.shouldSkipEventForRespondent2LiP;
-import static uk.gov.hmcts.reform.civil.utils.PartyUtils.buildPartiesReferences;
 
 @Service
 @RequiredArgsConstructor
@@ -44,7 +46,8 @@ public class ClaimDismissedRespondentNotificationHandler extends CallbackHandler
 
     private final NotificationService notificationService;
     private final NotificationsProperties notificationsProperties;
-    private final StateFlowEngine stateFlowEngine;
+    private final IStateFlowEngine stateFlowEngine;
+    private final OrganisationService organisationService;
 
     @Override
     protected Map<String, Callback> callbacks() {
@@ -83,10 +86,13 @@ public class ClaimDismissedRespondentNotificationHandler extends CallbackHandler
 
         String solicitorClaimDismissedProperty = getSolicitorClaimDismissedProperty(callbackParams.getCaseData());
 
+        Map<String, String> notificationProperties = addProperties(caseData);
+        notificationProperties.put(CLAIM_LEGAL_ORG_NAME_SPEC, getRespondentOrgName(callbackParams, caseData));
+
         notificationService.sendMail(
             recipient,
             solicitorClaimDismissedProperty,
-            addProperties(caseData),
+            notificationProperties,
             String.format(REFERENCE_TEMPLATE, caseData.getLegacyCaseReference())
         );
 
@@ -95,10 +101,17 @@ public class ClaimDismissedRespondentNotificationHandler extends CallbackHandler
 
     @Override
     public Map<String, String> addProperties(CaseData caseData) {
-        return Map.of(
-            CLAIM_REFERENCE_NUMBER, caseData.getLegacyCaseReference(),
-            PARTY_REFERENCES, buildPartiesReferences(caseData)
-        );
+        return new HashMap<>(Map.of(
+            CLAIM_REFERENCE_NUMBER, caseData.getCcdCaseReference().toString(),
+            PARTY_REFERENCES, buildPartiesReferencesEmailSubject(caseData)
+        ));
+    }
+
+    private String getRespondentOrgName(CallbackParams callbackParams, CaseData caseData) {
+        return !is1v1Or2v1Case(caseData)
+            && !isRespondent1(callbackParams, NOTIFY_RESPONDENT_SOLICITOR1_FOR_CLAIM_DISMISSED)
+            ? getRespondentLegalOrganizationName(caseData.getRespondent2OrganisationPolicy(), organisationService)
+            : getRespondentLegalOrganizationName(caseData.getRespondent1OrganisationPolicy(), organisationService);
     }
 
     private String getSolicitorClaimDismissedProperty(CaseData caseData) {
@@ -106,7 +119,7 @@ public class ClaimDismissedRespondentNotificationHandler extends CallbackHandler
             stateFlowEngine.evaluate(caseData).getStateHistory()
                 .stream()
                 .map(State::getName)
-                .collect(Collectors.toList()),
+                .toList(),
             notificationsProperties
         );
     }
