@@ -9,7 +9,6 @@ import net.minidev.json.annotate.JsonIgnore;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Data
 @Builder
@@ -45,6 +44,8 @@ public class EventHistory {
     private List<Event> interlocutoryJudgment;
     @Singular("defaultJudgment")
     private List<Event> defaultJudgment;
+    @Singular("setAsideJudgment")
+    private List<Event> setAsideJudgment;
     @Singular("statesPaid")
     private List<Event> statesPaid;
     @Singular("judgmentByAdmission")
@@ -53,6 +54,8 @@ public class EventHistory {
     private List<Event> generalFormOfApplication;
     @Singular("defenceStruckOut")
     private List<Event> defenceStruckOut;
+    @Singular("certificateOfSatisfactionOrCancellation")
+    private List<Event> certificateOfSatisfactionOrCancellation;
 
     @JsonIgnore
     public List<Event> flatEvents() {
@@ -72,14 +75,16 @@ public class EventHistory {
             breathingSpaceMentalHealthLifted,
             interlocutoryJudgment,
             defaultJudgment,
+            setAsideJudgment,
             statesPaid,
             judgmentByAdmission,
             generalFormOfApplication,
-            defenceStruckOut
+            defenceStruckOut,
+            certificateOfSatisfactionOrCancellation
         );
         return eventsList.stream()
             .filter(Objects::nonNull)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
