@@ -4,7 +4,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.ccd.client.model.CaseEventDetail;
 import uk.gov.hmcts.reform.ccd.client.model.SearchResult;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.DocumentType;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.citizenui.CcdDashboardClaimantClaimMatcher;
@@ -13,7 +15,9 @@ import uk.gov.hmcts.reform.civil.model.citizenui.DashboardClaimInfo;
 import uk.gov.hmcts.reform.civil.model.citizenui.DashboardClaimStatus;
 import uk.gov.hmcts.reform.civil.model.citizenui.DashboardClaimStatusFactory;
 import uk.gov.hmcts.reform.civil.model.citizenui.DashboardResponse;
+import uk.gov.hmcts.reform.civil.model.judgmentonline.JudgmentType;
 import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
+import uk.gov.hmcts.reform.civil.service.CoreCaseEventDataService;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.claimstore.ClaimStoreService;
 
@@ -24,7 +28,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -40,6 +43,7 @@ public class DashboardClaimInfoService {
     private final CoreCaseDataService coreCaseDataService;
     private final DashboardClaimStatusFactory dashboardClaimStatusFactory;
     private final FeatureToggleService featureToggleService;
+    private final CoreCaseEventDataService eventDataService;
 
     public List<DashboardClaimInfo> getOcmcDefendantClaims(String authorisation, String defendantId) {
         log.info("-----------calling ocmc getOCMCDefendantClaims()-------------");
@@ -80,8 +84,7 @@ public class DashboardClaimInfoService {
 
     private List<DashboardClaimInfo> getClaimsForClaimant(String authorisation, String claimantId) {
         log.info("-----------calling ocmc claimant claims-------------");
-        List<DashboardClaimInfo> ocmcClaims = claimStoreService.getClaimsForClaimant(authorisation, claimantId);
-        return ocmcClaims;
+        return claimStoreService.getClaimsForClaimant(authorisation, claimantId);
     }
 
     private List<DashboardClaimInfo> getDashboardItemsForCurrentPage(List<DashboardClaimInfo> ocmcClaims,
@@ -114,7 +117,7 @@ public class DashboardClaimInfoService {
     private List<DashboardClaimInfo> sortOcmcCases(List<DashboardClaimInfo> ocmcCases) {
         return ocmcCases.stream()
             .sorted(Comparator.comparing(DashboardClaimInfo::getCreatedDate).reversed())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<DashboardClaimInfo> translateSearchResultToDashboardItems(SearchResult claims, boolean isClaimant) {
@@ -126,7 +129,7 @@ public class DashboardClaimInfoService {
                 caseDetails,
                 isClaimant
             ))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private DashboardClaimInfo translateCaseDataToDashboardClaimInfo(CaseDetails caseDetails, boolean isClaimant) {
@@ -150,6 +153,31 @@ public class DashboardClaimInfoService {
 
         if (caseData.getRespondToAdmittedClaimOwingAmountPounds() != null) {
             item.setRespondToAdmittedClaimOwingAmountPounds(caseData.getRespondToAdmittedClaimOwingAmountPounds());
+        }
+
+        if (caseData.hasApplicant1AcceptedCcj()) {
+            item.setCcjRequestedDate(caseData.getApplicant1ResponseDate());
+        }
+
+        if (caseData.getActiveJudgment() != null) {
+            item.setCcjRequestedDate(caseData.getActiveJudgment().getCreatedTimestamp());
+        } else if (caseData.isCcjRequestJudgmentByAdmission() && caseData.hasApplicant1AcceptedCcj()) {
+            item.setCcjRequestedDate(caseData.getApplicant1ResponseDate());
+        } else {
+            item.setCcjRequestedDate(caseData.getTakenOfflineDate());
+        }
+
+        if (caseData.getActiveJudgment() != null
+            && caseData.getActiveJudgment().getType().equals(JudgmentType.DEFAULT_JUDGMENT)
+            && caseData.getActiveJudgment().getIssueDate() != null) {
+            item.setDefaultJudgementIssuedDate(caseData.getActiveJudgment().getIssueDate());
+        } else if (caseData.getActiveJudgment() == null && caseData.getDefaultJudgmentDocuments() != null) {
+            caseData.getDefaultJudgmentDocuments().stream()
+                .map(el -> el.getValue())
+                .filter(doc -> doc.getDocumentType().equals(DocumentType.DEFAULT_JUDGMENT))
+                .map(doc -> doc.getCreatedDatetime().toLocalDate())
+                .findFirst()
+                .ifPresent(item::setDefaultJudgementIssuedDate);
         }
 
         return item;
@@ -178,14 +206,17 @@ public class DashboardClaimInfoService {
     }
 
     private DashboardClaimStatus getStatus(boolean isClaimant, CaseData caseData) {
+        List<CaseEventDetail> events = Optional.ofNullable(caseData.getCcdCaseReference())
+                .map(s -> eventDataService.getEventsForCase(s.toString()))
+                    .orElse(Collections.emptyList());
         return isClaimant
             ? dashboardClaimStatusFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
             caseData,
-            featureToggleService
+            featureToggleService, events
         ))
             : dashboardClaimStatusFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
             caseData,
-            featureToggleService
+            featureToggleService, events
         ));
     }
 }
