@@ -2,8 +2,6 @@ package uk.gov.hmcts.reform.civil.utils;
 
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import uk.gov.hmcts.reform.civil.enums.MultiPartyScenario;
-import uk.gov.hmcts.reform.civil.enums.YesOrNo;
 import uk.gov.hmcts.reform.civil.enums.dq.UnavailableDateType;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.UnavailableDate;
@@ -14,12 +12,9 @@ import uk.gov.hmcts.reform.civil.model.dq.Respondent1DQ;
 import uk.gov.hmcts.reform.civil.model.dq.Respondent2DQ;
 import uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
-
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.time.LocalDate.now;
@@ -44,248 +39,6 @@ public class UnavailabilityDatesUtilsTest {
     private static final String DJ_EVENT = "Request DJ Event";
 
     @Nested
-    class UpdateContactDetailsNotEnabled {
-        @Test
-        public void shouldReturnSingleUnavailabilityDateWhenProvidedForRespondent1() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateRespondentFullDefence()
-                .respondent1DQWithUnavailableDates()
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, false);
-            UnavailableDate expected = UnavailableDate.builder()
-                .date(LocalDate.now().plusDays(1))
-                .unavailableDateType(SINGLE_DATE)
-                .build();
-            UnavailableDate result = unwrapElements(builder.build().getRespondent1().getUnavailableDates()).get(0);
-            assertEquals(expected.getDate(), result.getDate());
-            assertEquals(expected.getUnavailableDateType(), result.getUnavailableDateType());
-        }
-
-        @Test
-        public void shouldReturnEmptyWhenDefendantResponseNoUnavailableDates() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateRespondentFullDefence()
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, false);
-            assertThat(builder.build().getRespondent1().getUnavailableDates() == null).isTrue();
-        }
-
-        @Test
-        public void shouldReturnDateRangesWhenProvidedForRespondent1() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateApplicantRespondToDefenceAndProceed()
-                .respondent1DQWithUnavailableDateRange()
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, false);
-            UnavailableDate expected = UnavailableDate.builder()
-                .fromDate(LocalDate.now().plusDays(1))
-                .toDate(LocalDate.now().plusDays(2))
-                .unavailableDateType(SINGLE_DATE)
-                .build();
-            UnavailableDate result = unwrapElements(builder.build().getRespondent1().getUnavailableDates()).get(0);
-            assertEquals(result.getFromDate(), expected.getFromDate());
-        }
-
-        @Test
-        public void shouldReturnDateRangesWhenProvidedForApplicant1() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateApplicantRespondToDefenceAndProceed()
-                .applicant1DQWithUnavailableDateRange()
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder, false);
-            UnavailableDate expected = UnavailableDate.builder()
-                .fromDate(LocalDate.now().plusDays(1))
-                .toDate(LocalDate.now().plusDays(2))
-                .unavailableDateType(UnavailableDateType.DATE_RANGE)
-                .build();
-            UnavailableDate result = unwrapElements(builder.build().getApplicant1().getUnavailableDates()).get(0);
-            assertEquals(result.getFromDate(), expected.getFromDate());
-        }
-
-        @Test
-        public void shouldUpdateUnavailableDatesForRespondentWhenEnabled() {
-            // Przygotowanie danych testowych za pomocą metod respondent1DQWithUnavailableDateRange i respondent2DQWithUnavailableDateRange
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateApplicantRespondToDefenceAndProceed(MultiPartyScenario.ONE_V_TWO_TWO_LEGAL_REP)
-                .respondent1DQWithUnavailableDateRange()
-                .respondent2DQWithUnavailableDateRange()
-                .respondent1ResponseDate(LocalDateTime.now())
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            boolean updateContactDetailsEnabled = true;
-
-            // Wywołanie metody do przetestowania
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, updateContactDetailsEnabled);
-
-            // Pobranie zaktualizowanych niedostępności dla Respondentów
-            List<Element<UnavailableDate>> updatedUnavailableDatesResp1 =
-                builder.build().getRespondent1().getUnavailableDates();
-            List<Element<UnavailableDate>> updatedUnavailableDatesResp2 =
-                builder.build().getRespondent2().getUnavailableDates();
-
-            // Aserty dla Respondenta 1
-            assertThat(updatedUnavailableDatesResp1)
-                .isNotNull()
-                .hasSize(1);
-
-            UnavailableDate updatedDateResp1 = updatedUnavailableDatesResp1.get(0).getValue();
-
-            // Oczekiwane dane dla Respondenta 1
-            UnavailableDate expectedDateResp1 = UnavailableDate.builder()
-                .fromDate(LocalDate.now().plusDays(1)) // Oczekiwana data rozpoczęcia
-                .toDate(LocalDate.now().plusDays(2)) // Oczekiwana data zakończenia
-                .unavailableDateType(UnavailableDateType.DATE_RANGE) // Ustawić odpowiedni typ
-                .build();
-
-            assertThat(updatedDateResp1.getFromDate()).isEqualTo(expectedDateResp1.getFromDate());
-            assertThat(updatedDateResp1.getToDate()).isEqualTo(expectedDateResp1.getToDate());
-            assertThat(updatedDateResp1.getUnavailableDateType()).isEqualTo(expectedDateResp1.getUnavailableDateType());
-
-            // Aserty dla Respondenta 2
-            assertThat(updatedUnavailableDatesResp2)
-                .isNotNull()
-                .hasSize(1);
-
-            UnavailableDate updatedDateResp2 = updatedUnavailableDatesResp2.get(0).getValue();
-
-            // Oczekiwane dane dla Respondenta 2
-            UnavailableDate expectedDateResp2 = UnavailableDate.builder()
-                .fromDate(LocalDate.now().plusDays(1)) // Oczekiwana data rozpoczęcia
-                .toDate(LocalDate.now().plusDays(2)) // Oczekiwana data zakończenia
-                .unavailableDateType(UnavailableDateType.DATE_RANGE) // Ustawić odpowiedni typ
-                .build();
-
-            assertThat(updatedDateResp2.getFromDate()).isEqualTo(expectedDateResp2.getFromDate());
-            assertThat(updatedDateResp2.getToDate()).isEqualTo(expectedDateResp2.getToDate());
-            assertThat(updatedDateResp2.getUnavailableDateType()).isEqualTo(expectedDateResp2.getUnavailableDateType());
-        }
-
-        @Test
-        public void shouldReturnSingleUnavailabilityDateWhenProvidedForApplicant1() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateRespondentFullDefence()
-                .applicant1DQWithUnavailableDate()
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder, false);
-            UnavailableDate expected = UnavailableDate.builder()
-                .date(LocalDate.now().plusDays(1))
-                .unavailableDateType(SINGLE_DATE)
-                .build();
-            UnavailableDate result = unwrapElements(builder.build().getApplicant1().getUnavailableDates()).get(0);
-            assertEquals(expected.getDate(), result.getDate());
-            assertEquals(expected.getUnavailableDateType(), result.getUnavailableDateType());
-        }
-
-        @Test
-        public void shouldReturnSingleUnavailabilityDateWhenProvidedForRespondent2() {
-            UnavailableDate unavailableDate = UnavailableDate.builder()
-                    .date(LocalDate.now().plusDays(1))
-                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                    .build();
-            CaseData caseData = CaseDataBuilder.builder()
-                    .atStateRespondentFullDefence()
-                    .multiPartyClaimTwoDefendantSolicitors()
-                    .respondent2SameLegalRepresentative(YesOrNo.NO)
-                    .respondent2DQWithUnavailableDateRange()
-                    .respondent2ResponseDate(issueDate.atStartOfDay())
-                    .respondent2DQ(Respondent2DQ.builder()
-                            .respondent2DQHearing(Hearing.builder()
-                                    .unavailableDatesRequired(YES)
-                                    .unavailableDates(wrapElements(List.of(unavailableDate))).build())
-                            .build())
-                    .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, true);
-            UnavailableDate expected = UnavailableDate.builder()
-                    .date(LocalDate.now().plusDays(1))
-                    .unavailableDateType(SINGLE_DATE)
-                    .build();
-            UnavailableDate result = unwrapElements(builder.build().getRespondent2().getUnavailableDates()).get(0);
-            assertEquals(expected.getDate(), result.getDate());
-            assertEquals(expected.getUnavailableDateType(), result.getUnavailableDateType());
-        }
-
-        @Test
-        public void shouldReturnDatesForBothApplicants2v1() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .multiPartyClaimTwoApplicants()
-                .atStateBothApplicantsRespondToDefenceAndProceed_2v1()
-                .applicant1DQWithUnavailableDateRange()
-                .build();
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder, false);
-            List<Element<UnavailableDate>> expected = wrapElements(UnavailableDate.builder()
-                                                                       .fromDate(LocalDate.now().plusDays(1))
-                                                                       .toDate(LocalDate.now().plusDays(2))
-                                                                       .unavailableDateType(DATE_RANGE)
-                                                                       .build());
-            List<Element<UnavailableDate>> expectedApplicant1 = builder.build().getApplicant1().getUnavailableDates();
-            List<Element<UnavailableDate>> expectedApplicant2 = builder.build().getApplicant2().getUnavailableDates();
-
-            assertThat(expectedApplicant1).isEqualTo(expected);
-            assertThat(expectedApplicant2).isEqualTo(expected);
-        }
-
-        @Test
-        public void shouldRollUpUnavailabilityDateWhenProvidedForApplicantDJ() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateClaimDetailsNotified()
-                .atStateClaimantRequestsDJWithUnavailableDates()
-                .build();
-
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicantDJ(builder, false);
-
-            UnavailableDate expectedSingleDate = UnavailableDate.builder()
-                .unavailableDateType(SINGLE_DATE)
-                .date(LocalDate.of(2023, 8, 20))
-                .build();
-
-            UnavailableDate expectedDateRange = UnavailableDate.builder()
-                .unavailableDateType(DATE_RANGE)
-                .fromDate(LocalDate.of(2023, 8, 20))
-                .toDate(LocalDate.of(2023, 8, 22))
-                .build();
-
-            List<Element<UnavailableDate>> expected = wrapElements(List.of(expectedSingleDate, expectedDateRange));
-
-            assertThat(builder.build().getApplicant1().getUnavailableDates()).isEqualTo(expected);
-        }
-
-        @Test
-        public void shouldReturnUnavailabilityDateWhenProvidedForApplicantDJ2v1() {
-            CaseData caseData = CaseDataBuilder.builder()
-                .atStateClaimDetailsNotified()
-                .multiPartyClaimTwoApplicants()
-                .atStateClaimantRequestsDJWithUnavailableDates()
-                .build();
-
-            CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicantDJ(builder, false);
-
-            UnavailableDate expectedSingleDate = UnavailableDate.builder()
-                .unavailableDateType(SINGLE_DATE)
-                .date(LocalDate.of(2023, 8, 20))
-                .build();
-
-            UnavailableDate expectedDateRange = UnavailableDate.builder()
-                .unavailableDateType(DATE_RANGE)
-                .fromDate(LocalDate.of(2023, 8, 20))
-                .toDate(LocalDate.of(2023, 8, 22))
-                .build();
-
-            List<Element<UnavailableDate>> expected = wrapElements(List.of(expectedSingleDate, expectedDateRange));
-
-            assertThat(builder.build().getApplicant1().getUnavailableDates()).isEqualTo(expected);
-        }
-    }
-
-    @Nested
     class UpdateContactDetailsEnabled {
 
         private static final String DEFENDANT_RESPONSE_EVENT = "Defendant Response Event";
@@ -299,7 +52,7 @@ public class UnavailabilityDatesUtilsTest {
                 .respondent1DQWithUnavailableDates()
                 .build();
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder);
             UnavailableDate expected = UnavailableDate.builder()
                 .date(LocalDate.now().plusDays(1))
                 .unavailableDateType(SINGLE_DATE)
@@ -317,7 +70,7 @@ public class UnavailabilityDatesUtilsTest {
                 .atStateRespondentFullDefence()
                 .build();
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder);
             assertThat(builder.build().getRespondent1().getUnavailableDates() == null).isTrue();
         }
 
@@ -328,7 +81,7 @@ public class UnavailabilityDatesUtilsTest {
                 .respondent1DQWithUnavailableDateRange()
                 .build();
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForRespondent(builder);
             UnavailableDate expected = UnavailableDate.builder()
                 .fromDate(LocalDate.now().plusDays(1))
                 .toDate(LocalDate.now().plusDays(2))
@@ -347,7 +100,7 @@ public class UnavailabilityDatesUtilsTest {
                 .applicant1DQWithUnavailableDateRange()
                 .build();
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder);
             UnavailableDate expected = UnavailableDate.builder()
                 .fromDate(LocalDate.now().plusDays(1))
                 .toDate(LocalDate.now().plusDays(2))
@@ -366,7 +119,7 @@ public class UnavailabilityDatesUtilsTest {
                 .applicant1DQWithUnavailableDate()
                 .build();
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder);
             UnavailableDate expected = UnavailableDate.builder()
                 .date(LocalDate.now().plusDays(1))
                 .unavailableDateType(SINGLE_DATE)
@@ -386,7 +139,7 @@ public class UnavailabilityDatesUtilsTest {
                 .applicant1DQWithUnavailableDateRange()
                 .build();
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicant(builder);
             List<Element<UnavailableDate>> expected = wrapElements(UnavailableDate.builder()
                                                                        .fromDate(LocalDate.now().plusDays(1))
                                                                        .toDate(LocalDate.now().plusDays(2))
@@ -411,7 +164,7 @@ public class UnavailabilityDatesUtilsTest {
             LocalDate dateAdded = LocalDate.now();
 
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicantDJ(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicantDJ(builder);
 
             UnavailableDate expectedSingleDate = UnavailableDate.builder()
                 .unavailableDateType(SINGLE_DATE)
@@ -444,7 +197,7 @@ public class UnavailabilityDatesUtilsTest {
             LocalDate dateAdded = LocalDate.now();
 
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicantDJ(builder, true);
+            UnavailabilityDatesUtils.rollUpUnavailabilityDatesForApplicantDJ(builder);
 
             UnavailableDate expectedSingleDate = UnavailableDate.builder()
                 .unavailableDateType(SINGLE_DATE)
@@ -474,7 +227,7 @@ public class UnavailabilityDatesUtilsTest {
                 .build();
 
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            updateMissingUnavailableDatesForApplicants(caseData, builder, true);
+            updateMissingUnavailableDatesForApplicants(caseData, builder);
             UnavailableDate expected = UnavailableDate.builder()
                 .date(LocalDate.now().plusDays(1))
                 .unavailableDateType(SINGLE_DATE)
@@ -496,7 +249,7 @@ public class UnavailabilityDatesUtilsTest {
             LocalDate dateAdded = LocalDate.now();
 
             CaseData.CaseDataBuilder<?, ?> builder = caseData.toBuilder();
-            updateMissingUnavailableDatesForApplicants(caseData, builder, true);
+            updateMissingUnavailableDatesForApplicants(caseData, builder);
 
             UnavailableDate expectedSingleDate = UnavailableDate.builder()
                 .unavailableDateType(SINGLE_DATE)
@@ -668,7 +421,7 @@ public class UnavailabilityDatesUtilsTest {
                 .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                 .date(LocalDate.of(2022, 5, 2))
                 .build()
-        ).map(ElementUtils::element).collect(Collectors.toList());
+        ).map(ElementUtils::element).toList();
 
         @Test
         public void shouldCopyDatesIntoListingTabFieldsForRespondent1() {
@@ -679,7 +432,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(DEFENDANT_RESPONSE_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             CaseData caseData = CaseDataBuilder.builder()
                 .atStateClaimantFullDefence()
@@ -713,7 +466,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(DEFENDANT_RESPONSE_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             CaseData caseData = CaseDataBuilder.builder()
                 .atStateClaimantFullDefence()
@@ -747,7 +500,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(CLAIMANT_INTENTION_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             CaseData caseData = CaseDataBuilder.builder()
                 .atStateClaimantFullDefence()
@@ -781,7 +534,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(CLAIMANT_INTENTION_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             CaseData caseData = CaseDataBuilder.builder()
                 .atStateClaimantFullDefence()
@@ -823,7 +576,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(DJ_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             CaseData caseData = CaseDataBuilder.builder()
                 .atStateClaimDetailsNotified()
@@ -893,7 +646,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(DEFENDANT_RESPONSE_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             List<UnavailableDate> expectedDatesApplicant = Stream.of(
                 UnavailableDate.builder()
@@ -902,7 +655,7 @@ public class UnavailabilityDatesUtilsTest {
                     .dateAdded(issueDate)
                     .eventAdded(CLAIMANT_INTENTION_EVENT)
                     .build()
-            ).collect(Collectors.toList());
+            ).toList();
 
             assertThat(unwrapElements(builder.build().getApplicant1().getUnavailableDates())).isEqualTo(expectedDatesApplicant);
             assertThat(unwrapElements(builder.build().getApplicant1UnavailableDatesForTab())).isEqualTo(expectedDatesApplicant);
